feat: v1.4.7 — мобильное меню через портал (непрозрачный лист), убран дубль языков в футере, плавные темы, og-hero.png

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,11 +32,11 @@
   },
   "include": [
     "next-env.d.ts",
+    ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs",
-    ".next/types/**/*.ts"
+    "**/*.mjs"
   ],
   "exclude": [
     "node_modules"
