--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "clsx": "2.1.1",
     "next": "14.2.12",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
@@ -22,6 +24,7 @@
     "eslint-config-next": "14.2.12",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.13",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "@types/leaflet": "^1.9.12"
   }
 }
