--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs"
+    "**/*.mjs",
+    "types/**/*.d.ts"
   ],
   "exclude": [
     "node_modules"
